Fixed horizontal scroll

--- a/scss/app.sass
+++ b/scss/app.sass
@@ -58,8 +58,8 @@ h2
   letter-spacing: 1px
 .github-source
   position: absolute
-  top: -5px
-  right: -5px
+  top: 0
+  right: 0
   svg
     height: 120px
     width: 120px
